--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 maxfail = 2
-addopts = -n=1
+addopts = -n 3 --html=reports/report.html --alluredir=reports/allure-results
+
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s - %(message)s
