--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 playwright==1.51.0
-pytest==7.2.0
+pytest==8.3.5
 pytest-playwright==0.0.7
 pytest-xdist==2.5.0
+pytest-html==3.1.1
+allure-pytest == 2.13.5
