--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 maxfail = 2
-addopts = -n 1 --html=reports/report.html --alluredir=reports/allure-results
+addopts =
+    -n 1
+    --html=reports/report.html
+    --alluredir=reports/allure-results
 
 log_cli = true
 log_cli_level = INFO
