--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,5 @@
 maxfail = 2
 addopts =
     -n 3
-    --html=reports/report.html
+    --html=reports/report.html --self-contained-html
     --alluredir=reports/allure-results
-
